--- a/Live_Examples/Simple Linear Regression/1_simple_linear_regression.ipynb
+++ b/Live_Examples/Simple Linear Regression/1_simple_linear_regression.ipynb
@@ -46,7 +46,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 1/3, random_state = 0)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train, y_train)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +160,7 @@
       "source": [
         "y_pred = regressor.predict(X_test)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "plt.ylabel('Revenue')\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -238,7 +238,7 @@
         "plt.ylabel('Revenue')\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -263,18 +263,9 @@
       },
       "source": [
         "Conclusion\n",
-        "> as temperature gets increased sales of ice cream get incressed\n",
-        " \n",
+        "> as the temperature gets increased sales of ice cream get increased\n",
         "\n",
-        "> Highest revenu generated when the temprature is in between 11 celsius to 32 celsius\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "> Highest revenue generated when the temperature is in between 11 Celsius to 32 celsius"
       ]
     }
   ]
