decision_tree_regression

--- a/Live_Examples/5. Descision Tree/decision_tree_regression.ipynb
+++ b/Live_Examples/5. Descision Tree/decision_tree_regression.ipynb
@@ -237,7 +237,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Predicting the x_text"
+        "# Predicting the x_test"
       ]
     },
     {
