--- a/Machine Learning Models with Real Life_Example/6. Natural Language Processing/Comparative study of classifiers/Comparative study of classifiers.ipynb
+++ b/Machine Learning Models with Real Life_Example/6. Natural Language Processing/Comparative study of classifiers/Comparative study of classifiers.ipynb
@@ -938,10 +938,7 @@
         "colab_type": "text"
       },
       "source": [
-        "> As per the Accuracy we can select Decision Tree Classifier\n",
-        "\n",
-        "\n",
-        "> but if the cost of false prediction is heigher then prefer SVM instade of Decision Tree\n",
+        "> As per the Accuracy we can select SVC\n",
         "\n"
       ]
     }
